// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alexa TDN17 lamdba should respond to GetInformation request 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak> 
      <p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p>
      <p>Der Tag der Niedersachsen findet statt von Freitag den 1. bis Sonntag den 3. September.</p>
      <p>Wünschen sie mehr Informationen zum Programm, sagen sie <emphasis>Programm</emphasis>.</p>
     </speak>",
    "type": "SSML",
  },
  "shouldEndSession": true,
}
`;

exports[`Alexa TDN17 lamdba should respond to GetProgram request 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak> 
        <p>Der Tag der Niedersachsen findet statt von Freitag den 1. bis Sonntag den 3. September.</p>
        <p>Für welchen Tag interessieren Sie sich?</p>
        <p>Sagen Sie <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</p>
       </speak>",
    "type": "SSML",
  },
  "shouldEndSession": true,
}
`;

exports[`Alexa TDN17 lamdba should respond to GetProgram request with day parameter 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak> Am freitag gibt es Würstchen. </speak>",
    "type": "SSML",
  },
  "shouldEndSession": true,
}
`;

exports[`Alexa TDN17 lamdba should respond to a LaunchRequest 1`] = `
Object {
  "outputSpeech": Object {
    "ssml": "<speak> 
      <p>Willkommen zum <say-as interpret-as=\\"ordinal\\">35.</say-as> Tag der Niedersachsen 2017.</p>
      <p>Ich habe allgemeine Informationen oder eine Programmübersicht.</p>
      <p>Sagen Sie <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis></p>
     </speak>",
    "type": "SSML",
  },
  "shouldEndSession": true,
}
`;
